--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .metadata
-**/bin
-**/.classpath
-**/.project
-**/.settings
+*Obligatorio/bin
+*Obligatorio/.classpath
+*Obligatorio/.project
+*Obligatorio/.settings
